Fix suggest games button sweeping laser effect by fixing z-index layer

--- a/frontend/src/app/pages/query-screen/query-screen.css
+++ b/frontend/src/app/pages/query-screen/query-screen.css
@@ -580,7 +580,7 @@ button:focus-visible,
     #ff00ff,
     #ff5738
   );
-  z-index: -1;
+  z-index: 0;
   animation: rotate-neon 3s linear infinite;
   filter: blur(8px);
   opacity: 0.4;
